pxc/tests/test_091_closure_up/upconst.px
public namespace upconst;
import common -;

struct foo {
  public int v;
  public function int hoge(int x) const {
    function int fuga(int x) {
      v += x; // error: v is not modifiable
      return v;
    }
    return fuga(x);
  }
}

{
  foo o;
  o.v = 100;
  const r = o.hoge(3);
  println(r);
  println(o.v);
}
